--- a/index.html
+++ b/index.html
@@ -337,33 +337,7 @@
         const result = document.getElementById('form-result');
         
         // ¡¡¡IMPORTANTE!!! REEMPLAZA ESTA CLAVE CON LA TUYA
-        const accessKey = <!-- Form action API Endpoint -->
-  <form action="https://api.web3forms.com/submit" method="POST" id="form">
-
-    <!-- Your Access key here. Don't worry this can be public -->
-    <input type="hidden" name="access_key" value="1aa143a6-76a2-4eca-b30a-4e33d798c8c6">
-
-    <!-- Optional: Can be type="hidden" or type="text" for subject -->
-    <input type="hidden" name="subject" value="New Submission from Web3Forms">
-
-    <!-- Optional: From Name you want to see in the email
-          Default is "Notifications". you can overwrite here -->
-    <input type="hidden" name="from_name" value="Your Website Name">
-
-    <!-- Optional: Redirect URL after form submission -->
-    <input type="hidden" name="redirect" value="https://web3forms.com/success">
-
-    <!-- Optional: Add botcheck for basic spam protection. captcha is recommened -->
-    <input type="checkbox" name="botcheck" id="" style="display: none;">
-
-    <!-- Add your form fields here -->
-    <input type="text" name="name" required>
-    <input type="email" name="email" required>
-    <textarea name="message" required></textarea>
-
-    <button type="submit">Submit Form</button>
-
-</form>;
+        const accessKey = 7brr2ih01wimub;
 
         form.addEventListener('submit', function(e) {
             e.preventDefault();
